--- a/Frontend_P/style.css
+++ b/Frontend_P/style.css
@@ -13,6 +13,10 @@ h1, h2, h3{
   color: #fff;
 }
 
+main{
+  margin-left: 200px;
+  margin-right: 200px;
+}
 header{
 
     display: flex;
@@ -63,15 +67,55 @@ section h2{
 
 
 /* jogos */
-.card{
-  height: 80px;
-  width: 80px;
-
-  border:#13141A solid 1px;
-  border-radius: 10px;
+.jogos{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.card {
+  width: 300px;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  background-color: #FDA543;
+  margin: 10px;
+}
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
 
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card h5 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  background-color: #FDA543;
+}
+
+.card p {
+  font-size: 14px;
+  color: #333;
+  background-color: #FDA543;
+}
+
+.jogos-ver-mais{
+  align-content: center;
+  color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  border: #FDA543 solid 1px;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+}
 /* hamburger menu */
 a {
     position: absolute;
@@ -127,6 +171,3 @@ a {
     color: transparent;
     font-size: 0;
   }
-
-  git config --global user.email "you@example.com"
-  git config --global user.name "Your Name"
