--- a/Frontend_P/style.css
+++ b/Frontend_P/style.css
@@ -45,12 +45,30 @@ section h2{
   border-bottom: rgba(255,255,255,.2) solid 1px;
 }
 
+section{
+  margin-bottom: 20px;
+}
 
-/* about */
+/* features section */
+
+.tab {
+  display: none;
+}
+.tab-button {
+  padding: 10px;
+  cursor: pointer;
+  color: #fff;
+}
+.tab-button:hover {
+  transform: scale(1.1);
+}
+
+
+/* about section */
 
 .about{
   display: flex;
-  gap:20px;
+  gap: 20px;
 }
 .logo-about{
   border: 5px solid #FB3640;
@@ -66,7 +84,7 @@ section h2{
 }
 
 
-/* jogos */
+/* jogos section */
 .jogos{
   display: flex;
   flex-wrap: wrap;
@@ -116,6 +134,88 @@ section h2{
   margin: 0 auto;
   cursor: pointer;
 }
+
+/* Rankings Section */
+
+table {
+  width: 100%;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  color: #fff;
+}
+table img{
+  height: 50px;
+}
+tr:hover {
+  background: #17c69b;
+  color: #fff;
+}
+tr:first-child {
+  font-size: 20px;
+}
+
+/* Perfil */
+.perfil {
+  border: 1px solid red;
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+.info-jogador {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.perfil img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 20px;
+
+}
+
+.barras {
+  display: flex;
+  justify-content: space-around;
+}
+.barra {
+  width: 10px;
+  height: 50px;
+  background-color: red;
+  animation: barra 2s infinite;
+}
+@keyframes barra {
+  0% { height: 50px; }
+  50% { height: 100px; }
+  100% { height: 50px; }
+}
+
+
+
+
+/* Footer */
+
+
+footer{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-top: #fff solid 4px;
+  color: #fff;
+  padding: 20px;
+}
+ footer span:nth-child(2){
+  border-left: 2px solid #fff;
+  border-right: 2px solid #fff;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
 /* hamburger menu */
 a {
     position: absolute;
@@ -127,7 +227,8 @@ a {
     box-sizing: border-box;
     padding: 11px 0 0 9px;
   }
-  span {
+
+  header span {
     display: block;
     width: 34px;
     height: 5px;
@@ -135,39 +236,7 @@ a {
     transition: .5s;
     pointer-events: none;
   }
-  span:nth-child(2) {
+  header span:nth-child(2) {
     margin: 5px 0;
   }
-  .open {
-    border-color: rgba(255,255,255,.2);
-  }
-  .open span {
-    background: #fff;
-  }
-  .open :first-child {
-    transform: translateY(5px) rotate(-45deg);
-  }
-  .open :nth-child(2) {
-    transform: rotate(-45deg);
-    opacity: 0;
-  }
-  .open :last-child {
-    transform: translateY(-5px) rotate(-135deg);
-  }
-  nav {
-    position: absolute;
-    width: 200px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    background: rgb(239, 241, 241);
-    transform: translateX(-100%);
-    transition: .5s;
-  }
-  .open + nav {
-    transform: none;
-  }
-  code {
-    color: transparent;
-    font-size: 0;
-  }
+ 
